syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

enum EHeroGender
{
	EHERO_GENDER_NONE = 0;
	EHERO_GENDER_MALE = 1;
	EHERO_GENDER_FEMALE = 2;
}

enum EHeroClass
{
	EHERO_CLASS_NONE = 0;
	EHERO_CLASS_KNIGHT = 1;
	EHERO_CLASS_ARCHER = 2;
	EHERO_CLASS_WIZARD = 3;
	EHERO_CLASS_ROGUE = 4;
}

enum ECreateHeroResult
{
	ECREATE_HERO_RESULT_NONE = 0;
	ECREATE_HERO_RESULT_SUCCESS = 1;
	ECREATE_HERO_RESULT_FAIL_DUPLICATE_NAME = 2;
}

enum EObjectState 
{
	EOBJECT_STATE_NONE = 0;
	EOBJECT_STATE_IDLE = 1;
	EOBJECT_STATE_MOVE = 2;
	EOBJECT_STATE_SKILL = 3;
	EOBJECT_STATE_DEAD = 4;
}

enum EMoveDir
{
	EMOVE_DIR_NONE = 0;
	EMOVE_DIR_UP = 1;
	EMOVE_DIR_DOWN = 2;
	EMOVE_DIR_LEFT = 3;
	EMOVE_DIR_RIGHT = 4;
	EMOVE_DIR_UP_LEFT = 5;
	EMOVE_DIR_UP_RIGHT = 6;
	EMOVE_DIR_DOWN_LEFT = 7;
	EMOVE_DIR_DOWN_RIGHT = 8;
}

enum EGameObjectType 
{
	EGAME_OBJECT_TYPE_NONE = 0;
	EGAME_OBJECT_TYPE_HERO = 1;
	EGAME_OBJECT_TYPE_MONSTER = 2;
	EGAME_OBJECT_TYPE_PROJECTILE = 3;
	EGAME_OBJECT_TYPE_NPC = 4;
}

enum ECellCollisionType
{
	ECELL_COLLISION_TYPE_NONE = 0;
	ECELL_COLLISION_TYPE_WALL = 1;
}

enum EFindPathResult
{
    EFIND_PATH_RESULT_NONE = 0;
    EFIND_PATH_RESULT_FAIL_LERPCELL = 1;
    EFIND_PATH_RESULT_FAIL_NO_PATH = 2;
    EFIND_PATH_RESULT_FAIL_MOVE_TO = 3;
    EFIND_PATH_RESULT_FAIL_SAME_POSITION = 4;
    EFIND_PATH_RESULT_SUCCESS = 5;
}

enum ERespawnType 
{
	ERESPAWN_TYPE_NONE = 0;
	ERESPAWN_TYPE_RANDOM_INTERVAL = 1;
	ERESPAWN_TYPE_MAINTAIN_COUNT = 2;
}

enum EOwnerStat 
{
    EOWNER_STAT_SKILL_CASTER = 0;
    EOWNER_STAT_EFFECT_OWNER = 1;
}

enum EStatType 
{
    ESTAT_TYPE_MAX_HP = 0;
    ESTAT_TYPE_HP = 1;
    ESTAT_TYPE_HP_REGEN = 2;
    ESTAT_TYPE_MAX_MP = 3;
    ESTAT_TYPE_MP = 4;
    ESTAT_TYPE_MP_REGEN = 5;
    ESTAT_TYPE_ATTACK = 6;
    ESTAT_TYPE_DEFENCE = 7;
    ESTAT_TYPE_DODGE = 8;
    ESTAT_TYPE_ATTACK_SPEED = 9;
    ESTAT_TYPE_MOVE_SPEED = 10;
    ESTAT_TYPE_CRI_RATE = 11;
    ESTAT_TYPE_CRI_DAMAGE = 12;
    ESTAT_TYPE_STR = 13;
    ESTAT_TYPE_DEX = 14;
    ESTAT_TYPE_INT = 15;
    ESTAT_TYPE_CON = 16;
    ESTAT_TYPE_WIS = 17;
}

enum ECreatureStateFlag
{
	ECREATURE_STATE_FLAG_NONE = 0;
	ECREATURE_STATE_FLAG_SLOW = 1;
	ECREATURE_STATE_FLAG_STUN = 2;
	ECREATURE_STATE_FLAG_FASTER = 3;
	ECREATURE_STATE_FLAG_POISON = 4;
	ECREATURE_STATE_FLAG_MAX_COUNT = 5;
}

enum ESkillType
{
    ESKILL_TYPE_NONE = 0;
    ESKILL_TYPE_ACTIVE = 1;
    ESKILL_TYPE_PASSIVE = 2;
}

enum EUseSkillTargetType
{
    EUSE_SKILL_TARGET_TYPE_NONE = 0;
    EUSE_SKILL_TARGET_TYPE_SELF = 1;
    EUSE_SKILL_TARGET_TYPE_OTHER = 2;
    EUSE_SKILL_TARGET_TYPE_ANY = 3;
}

enum ETargetFriendType
{
   ETARGET_FRIEND_TYPE_NONE = 0;
   ETARGET_FRIEND_TYPE_FRIEND = 1;
   ETARGET_FRIEND_TYPE_ENEMY = 2;
   ETARGET_FRIEND_TYPE_ANY = 3;
}

enum EEffectType
{
   EEFFECT_TYPE_NONE = 0;
   EEFFECT_TYPE_DAMAGE = 1;
   EEFFECT_TYPE_HEAL = 2;
   EEFFECT_TYPE_BUFF_STAT = 3;
   EEFFECT_TYPE_BUFF_LIFE_STEAL = 4;  
   EEFFECT_TYPE_BUFF_STUN = 5;
}

enum EDurationPolicy 
{
    EDURATION_POLICY_INSTANT = 0;
    EDURATION_POLICY_DURATION = 1;
    EDURATION_POLICY_INFINITE = 2;
}

enum EFontType 
{
	EFONT_TYPE_NONE = 0;
    EFONT_TYPE_HIT = 1;
    EFONT_TYPE_CRITICAL = 2;
    EFONT_TYPE_MISS = 3;
    EFONT_TYPE_HEAL = 4;
    EFONT_TYPE_COST = 5;
    EFONT_TYPE_STUN = 6;
    EFONT_TYPE_GOLD = 7;
    EFONT_TYPE_EXP = 8;
}

enum EItemType 
{
	EITEM_TYPE_NONE = 0;
	EITEM_TYPE_EQUIPMENT = 1;
	EITEM_TYPE_CONSUMABLE = 2;
}

enum EItemSubType 
{
    EITEM_SUB_TYPE_NONE = 0;
    EITEM_SUB_TYPE_MAINWEAPON = 1;
    EITEM_SUB_TYPE_SUBWEAPON = 2;
    EITEM_SUB_TYPE_HELMET = 3;
    EITEM_SUB_TYPE_CHEST = 4;
    EITEM_SUB_TYPE_LEG = 5;
    EITEM_SUB_TYPE_SHOES = 6;
    EITEM_SUB_TYPE_GLOVES = 7;
    EITEM_SUB_TYPE_SHOULDER = 8;
    EITEM_SUB_TYPE_RING = 9;
    EITEM_SUB_TYPE_AMULET = 10;
    EITEM_SUB_TYPE_CONSUMABLE = 12;
}

enum EItemGrade 
{
    EITEM_GRADE_NONE = 0;
    EITEM_GRADE_COMMON = 1;
    EITEM_GRADE_UNCOMMON = 2;
    EITEM_GRADE_RARE = 3;
    EITEM_GRADE_EPIC = 4;
    EITEM_GRADE_LEGENDARY = 5;
}

enum EPotionType 
{
    EPOTION_TYPE_NONE = 0;
    EPOTION_TYPE_RECOVERY_HP = 1;
    EPOTION_TYPE_RECOVERY_MP = 2;
}

enum EItemSlotType 
{
    EITEM_SLOT_TYPE_NONE = 0;
    EITEM_SLOT_TYPE_MAINWEAPON = 1;             
    EITEM_SLOT_TYPE_SUBWEAPON = 2;
    EITEM_SLOT_TYPE_HELMET = 3;            
    EITEM_SLOT_TYPE_CHEST = 4;
    EITEM_SLOT_TYPE_LEG = 5;
    EITEM_SLOT_TYPE_SHOES = 6;        
    EITEM_SLOT_TYPE_GLOVES = 7;  
    EITEM_SLOT_TYPE_SHOULDER = 8;  
	EITEM_SLOT_TYPE_RING = 9;  
	EITEM_SLOT_TYPE_AMULET = 10;
    EITEM_SLOT_TYPE_EQUIPMENT_MAX = 11;
    EITEM_SLOT_TYPE_INVENTORY = 100;
    EITEM_SLOT_TYPE_WAREHOUSE = 101;
}

enum EItemStatus
{
    EITEM_STATUS_NONE = 0;
    EITEM_STATUS_EQUIPPED = 1;
    EITEM_STATUS_INVENTORY = 2;
    EITEM_STATUS_WAREHOUSE = 3;
}

enum EUpdateItemReason
{
    EUPDATE_ITEM_REASON_NONE = 0;
    EUPDATE_ITEM_REASON_USE_ITEM = 1;
}

enum EItemCooltimeGroup
{
    EITEM_COOLTIME_GROUP_NONE = 0;
    EITEM_COOLTIME_GROUP_HP = 1;
    EITEM_COOLTIME_GROUP_MP = 2;

}

enum EErrorMessage
{
    EERROR_MESSAGE_NONE = 0;
    EERROR_MESSAGE_LEVEL = 1;
    EERROR_MESSAGE_CLASS = 2;
    EERROR_MESSAGE_INVENTORY_FULL = 4;
    EERROR_MESSAGE_ETC = 3;
}

enum ECanUseSkillFailReason
{
    ECAN_USE_SKILL_FAIL_REASON_NONE = 0;
    ECAN_USE_SKILL_FAIL_REASON_COOLTIME = 1;
    ECAN_USE_SKILL_FAIL_REASON_INVALID_OWNER_STATE = 2;
    ECAN_USE_SKILL_FAIL_REASON_INVALID_TARGET = 3;
    ECAN_USE_SKILL_FAIL_REASON_INVALID_DATA = 4;
    ECAN_USE_SKILL_FAIL_REASON_SKILL_COST = 5;
    ECAN_USE_SKILL_FAIL_REASON_SKILL_RANGE = 6;    
}

enum ECurrencyType
{
    ECURRENCY_TYPE_NONE = 0;    
    ECURRENCY_TYPE_DIA = 1;    
    ECURRENCY_TYPE_GOLD = 2;    
}

enum ESkillSlot
{
    ESKILL_SLOT_NONE = 0;    
    ESKILL_SLOT_MAIN = 1;    
    ESKILL_SLOT_SKILLA = 2;    
    ESKILL_SLOT_SKILLB = 3;      
    ESKILL_SLOT_SKILLC = 4;    
    ESKILL_SLOT_SKILLD = 5;    
    ESKILL_SLOT_SKILLE = 6;    
    ESKILL_SLOT_PASSIVEA = 7;    
    ESKILL_SLOT_PASSIVEB = 8;    
    ESKILL_SLOT_PASSIVEC = 9;    
    ESKILL_SLOT_PASSIVED = 10;    
    ESKILL_SLOT_PASSIVEE = 11;      
}

enum EConsumableGroupType
{
    ECONSUMABLE_GROUP_TYPE_NONE = 0;
    ECONSUMABLE_GROUP_TYPE_HP = 1;
    ECONSUMABLE_GROUP_TYPE_MP = 2;
    ECONSUMABLE_GROUP_TYPE_ATTACK = 3;
}

enum ENpcType
{
    ENPC_TYPE_NONE = 0;
    ENPC_TYPE_PORTAL = 1;
    ENPC_TYPE_SHOP = 2;
}

enum ELeaveType
{
    ELEAVE_TYPE_NONE = 0;
    ELEAVE_TYPE_DEAD = 1;
    ELEAVE_TYPE_USER_LOGOUT = 2;
    ELEAVE_TYPE_DISCONNECTED = 3;
    ELEAVE_TYPE_CHANGE_ROOM = 4;
}

enum EQuestType
{
    EQUEST_TYPE_NONE = 0;
    EQUEST_TYPE_MAIN = 1;
    EQUEST_TYPE_SUB = 2;
    EQUEST_TYPE_DAILY = 3;
    EQUEST_TYPE_WEEKLY = 4;
    EQUEST_TYPE_MONTHLY = 5;
}

enum EQuestState
{
    EQUEST_STATE_NONE = 0;
    EQUEST_STATE_PROCESSING = 1;
    EQUEST_STATE_COMPLETED = 2;
    EQUEST_STATE_REWARD = 3;
}

enum EQuestTaskType
{
    EQUEST_TASK_TYPE_NONE = 0;
    EQUEST_TASK_TYPE_KILLTARGET = 1;
    EQUEST_TASK_TYPE_COLLECTION = 2;
    EQUEST_TASK_TYPE_TALK_TO_NPC = 3;
}